Scrollbar fixes

--- a/dev/orgarr.css
+++ b/dev/orgarr.css
@@ -35,7 +35,7 @@ body {
 }
 
 .OverlayScroller-thumb-1Lhfi:hover, .OverlayScroller\/thumb\/1Lhfi:hover,
-.Scroller-scroller-26MBT:hover::-webkit-scrollbar-thumb, .Scroller\/scroller\/26MBT:hover::-webkit-scrollbar-thumb {
+.Scroller-scroller-26MBT::-webkit-scrollbar-thumb:hover, .Scroller\/scroller\/26MBT::-webkit-scrollbar-thumb:hover {
   background-color: #323232;
 }
 
